--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
                 <div class="upload__column">
                     <h3 class="upload__heading">Recipe data</h3>
                     <label>Title</label>
-                    <input value="TEST12" required name="title" type="text" />
+                    <input value="Super Pizza" required name="title" type="text" />
                     <label>URL</label>
-                    <input value="TEST12" required name="sourceUrl" type="text" />
+                    <input value="https://-_-" required name="sourceUrl" type="text" />
                     <label>Image URL</label>
-                    <input value="TEST12" required name="image" type="text" />
+                    <input value="https://-_-" required name="image" type="text" />
                     <label>Publisher</label>
-                    <input value="TEST12" required name="publisher" type="text" />
+                    <input value="Przemyslaw Zeglicz" required name="publisher" type="text" />
                     <label>Prep time</label>
-                    <input value="23" required name="cookingTime" type="number" />
+                    <input value="75" required name="cookingTime" type="number" />
                     <label>Servings</label>
-                    <input value="23" required name="servings" type="number" />
+                    <input value="2" required name="servings" type="number" />
                 </div>
 
                 <div class="upload__column">
